New Innovation Page

--- a/clinicaldata/clinicaldata.html
+++ b/clinicaldata/clinicaldata.html
@@ -103,7 +103,7 @@
                     <div class="science-layout">
 
                          <section class="science-topic">
-                              <h2  class="science-list"><a href="learnclincaldata.html">Learn about Clincial Data</a></h2>
+                              <h2  class="science-list"><a href="learnclincaldata.html">Learn about Clinical Data</a></h2>
                               <ul>
                                    <li class="science-topics">
                                         <a href="learnclincaldata.html#phases">Phases of Clinical Trials</a>
