--- a/clinicaldata/datareadout.html
+++ b/clinicaldata/datareadout.html
@@ -91,11 +91,11 @@
                          <p>
                               This section is about me taking actual clinical data readouts and breaking them down. I will take screenshots 
                               of key sections of the data release and explain what it means. I will use my understanding of the science
-                              I focus on to show you how to eveluate data. The key is to then take that data and compare it to other competitors and 
+                              I focus on to show you how to evaluate data. The key is to then take that data and compare it to other competitors and 
                               the current standard of care. Any data read out can look good on its own. Then it has to be put into context to 
                               know where the data fits into the competitive landscape. I focus on Oncology and Genetics mostly so that is the 
                               kind of data you will learn about here. The key to learning to read any data is to figure out what the key measurements 
-                              are for any indication. Oncology has its own like Overal Survival and RECIST response rates. In the same way Immunology or 
+                              are for any indication. Oncology has its own like Overall Survival and RECIST response rates. In the same way Immunology or 
                               CNS indications have their key tests. The other important part is to ensure the trail design is valid. Too many 
                               times companies do not create good trails as they try to skew data to make it look better than it really does.
                          </p>
@@ -108,7 +108,7 @@
                               </ul>
 
                     <section>
-                         <h2 class="section-title" id="">First Clincal Trial</h2>
+                         <h2 class="section-title" id="">First Clinical Trial</h2>
                          <p>     
                              
                          </p>
