--- a/clinicaldata/learnclincaldata.html
+++ b/clinicaldata/learnclincaldata.html
@@ -89,9 +89,9 @@
                          </h2>
 
                          <p>
-                              This section is my guides to teach you about some of the key elements of the clincial trials. I go over the phases 
+                              This section is my guide to teach you about some of the key elements of the clinical trials. I go over the phases 
                               of the clinical trials and what they are designed to evaluate. I explain some of the statistical measures used in the 
-                              clinical data. I even go over a few of the key endpoints used in Oncology. This sections is about helping you uderstand 
+                              clinical data. I even go over a few of the key endpoints used in Oncology. This section is about helping you understand 
                               more about the clinical trials themselves before we try to actually read them. 
                          </p>
                     </section>
