--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
           <main>
                <div class="logo"><img class="page-logo" src="images/thumbnail.jpg" alt="Biotech2k.com"></div>
                
-               <section>
-                    <ul class="investor-link">Quick Links:
+               <div>
+                    <ul class="investor-link">
+                         <li>Quick Links:</li>
                          <li><a href="investing/portfolio.html">My Portfolio</a></li>
                          <li><a href="companies/companies.html">Company Profiles</a></li>
                          <li><a href="investing/investing.html">Learn about Investing</a></li>
                          <li><a href="learning/science.html">Learn about the Science</a></li>
                     </ul>
-               </section> 
+               </div> 
 
                <div class="front-page">
 
@@ -106,10 +107,10 @@
                                    make money istead of just losing me money.
                               </p>
                               <p>
-                                   <strong>2/10/2023: </strong> I sold just enough for my XBI in my Charity IRA to buy .94% position in CRSP.
+                                   <strong>2/10/2023: </strong> I sold just enough for my XBI in my Charity IRA to buy .94% position in <a href="companies/crispr.html">CRSP</a>.
                               </p>
                               <p>
-                                   <strong>2/10/2023: </strong> I added a starting position in VERV to my Charity IRA of .94%.
+                                   <strong>2/10/2023: </strong> I added a starting position in <a href="companies/verve.html">VERV</a> to my Charity IRA of .94%.
                               </p>
                          </div>
                     </section>
@@ -138,25 +139,7 @@
                          </div>
                     </section>
                </div>
-               <div class="front-page">
-                    <section class="news-updates">
-                         <div>
-                              <h2 class="section-title">Youtube</h2>
-                              <div class="videos">
-                                   <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PL5xvztUyPgDoQOnuWsLbrlqShE27M9PQD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                              </div>
-                         </div>
-                    </section>
-
-                    <section class="news-updates">
-                         <div>
-                              <h2 class="section-title">Twitter</h2>
-                              <div class="videos">
-                                   <blockquote class="twitter-tweet"><p lang="en" dir="ltr"><a href="https://t.co/HwJ63OKTCN">https://t.co/HwJ63OKTCN</a><br><br>Blueprint Medicines Corporation (NASDAQ: BPMC) today announced it will regain global commercialization and development rights to GAVRETO® (pralsetinib), exclud...</p>&mdash; Biotech2k (@Biotech2k1) <a href="https://twitter.com/Biotech2k1/status/1628747992122392576?ref_src=twsrc%5Etfw">February 23, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                              </div>
-                         </div>
-                    </section>
-               </div>
+               
           </main>
 
           <!--Here Starts the Footer-->
