--- a/innovation/innovation.html
+++ b/innovation/innovation.html
@@ -81,25 +81,8 @@
 
           <main>
 
-               <section class="container">
-                    <h2 class="section-title">
-                         Innovation in the Biotech Space
-                    </h2>
-
-                    <p>
-                       This section is about the discovery and the tracking of science in the biotechnology industry that is 
-                       leading the innovation of the future. Here I will look at the technologies driving science forward.
-                       This is about finding the cutting edge of science around Genetics, Immunology and Oncology. Those are the 
-                       areas I focus on. These will be just my opinions and ideas. The innovation section is designed to give ideas for
-                       investors as a jumping off point. I don't know if all of these areas of innovation will work out. Sometimes
-                       great science still fails. Sometimes it runs into challenges or just doesn't live up to expectations. This 
-                       innovation section will change as science evolves. There will always be science that matures while new 
-                       science is discovered. This section will always be about "what's next"?
-                    </p>
-               </section>
-
                <section class="list-border">
-                    <h2 class="section-title">Top Innovation Themes</h2>
+                    <h1 class="innovation-listhead">Top Innovation Themes</h1>
                     <div class="list-container">
                     <ol class="list-align">
                          <li class="tech-list"><a href="#techbio">TechBio</a></li>
@@ -113,8 +96,8 @@
                </section>
 
                <section class="container"  id="techbio">
-                    <h2 class="section-title">TechBio</h2>
-                    <p class="large-text">
+                    <h2 class="innovation-tech">TechBio</h2>
+                    <p>
                          This area of innovation is all about bringing technology into biotechnology. The high cost of drug 
                          prices is driven by the high cost of drug discovery. The statistics show that a drug can cost well 
                          over $1 billion to develop and 90% of the drugs that enter phase 1 fail. The high cost comes from 
@@ -133,12 +116,22 @@
                          improve the ability of companies to make drugs cheaper and with higher rates of success. This could 
                          significantly reduce drug cost over the long term.
                     </p>
+                    <div class="list-container">
+                         <h3 class="innovation-listhead">Companies In TechBio</h3>
+                         <ul class="list-align">
+                              <li class="innovation-link"><a href="../companies/relay.html">Relay Therapeutics</a></li>
+                              <li class="innovation-link"><a href="../companies/recursion.html">Recursion Phama</a></li>
+                              <li class="innovation-link"><a href="../companies/exscientia.html">Exscientia</a></li>
+                              <li class="innovation-link"><a href="../companies/abcellera.html">AbCellera</a></li>
+                              <li class="innovation-link"><a href="../companies/schrodinger.html">Schrodinger</a></li>
+                         </ul>
+                    </div>
                     <p class="top-link"><a href="#top">Top</a></p>
                </section>
 
                <section class="container" id="CRISPR">
-                    <h2 class="section-title">CRISPR</h2>
-                    <p class="large-text">
+                    <h2 class="innovation-tech">CRISPR</h2>
+                    <p>
                          CRISPR is a gene editing tool which can revolutionize the way we treat genetic diseases and completely 
                          create new ways to take on other diseases like cancer. It offers a low cost, easy to use, and very 
                          powerful set of tools to alter the DNA. Since its discovery, it has completely changed the landscape 
@@ -154,12 +147,22 @@
                          like carbon emissions and global warming. Combined with other technologies, it can be a very powerful 
                          tool.
                     </p>
+                    <div class="list-container">
+                         <h3 class="innovation-listhead">Companies in CRISPR</h3>
+                         <ul class="list-align">
+                              <li class="innovation-link"><a href="../companies/beam.html">Beam Therapeutics</a></li>
+                              <li class="innovation-link"><a href="../companies/intellia.html">Intellia Therapeutics</a></li>
+                              <li class="innovation-link"><a href="../companies/crispr.html">CRISPR Therapeutics</a></li>
+                              <li class="innovation-link"><a href="../companies/verve.html">Verve Therapeutics</a></li>
+                              <li class="innovation-link"><a href="../companies/prime.html">Prime Medicines</a></li>
+                         </ul>
+                    </div>
                     <p class="top-link"><a href="#top">Top</a></p>
                </section>
 
                <section class="container" id="sequencing">
-                    <h2 class="section-title">Sequencing</h2>
-                    <p class="large-text">
+                    <h2 class="innovation-tech">Sequencing</h2>
+                    <p>
                          Sequencing is a technology that takes a sample of a person’s DNA and runs it through a sequencing machine 
                          to read that DNA. This technology allows doctors and scientists to read the genetics of the patient so 
                          they can make decisions about their care. The demand for DNA sequencing is expected to more than triple 
@@ -177,11 +180,19 @@
                          population level genetic data from these databases can inform researchers where new treatments are 
                          needed.
                     </p>
+                    <div class="list-container">
+                         <h3 class="innovation-listhead">Companies in Sequencing</h3>
+                         <ul class="list-align">
+                              <li class="innovation-link"><a href="../companies/invitae.html">Invitae</a></li>
+                              <li class="innovation-link"><a href="../companies/pacbio.html">PacBio</a></li>
+                              <li class="innovation-link"><a href="../companies/oxford.html">Oxford Nanopore</a></li>
+                         </ul>
+                    </div>
                     <p class="top-link"><a href="#top">Top</a></p>
                </section>
 
                <section class="container" id="synbio">
-                    <h2 class="section-title">Synthetic Biology</h2>
+                    <h2 class="innovation-tech">Synthetic Biology</h2>
                     <p class="large-text">
                          Synthetic Biology is about taking the tool that is CRISPR gene editing and combining it with the 
                          technology of cell engineering to create new life. It is about taking microbes and rewriting their 
@@ -193,11 +204,18 @@
                          engineering, chemistry and gene editing could allow us to rewrite life on Earth. It could eventually 
                          allow us to colonize and survive on other planets.
                     </p>
+                    <div class="list-container">
+                         <h3 class="innovation-listhead">Companies in Synthetic Biology</h3>
+                         <ul class="list-align">
+                              <li class="innovation-link"><a href="../companies/ginkgo.html">Gingko Bioworks</a></li>
+                              <li class="innovation-link"><a href="../companies/twist.html">Twist Bioscience</a></li>
+                         </ul>
+                    </div>
                     <p class="top-link"><a href="#top">Top</a></p>
                </section>
 
                <section class="container" id="ipsc">
-                    <h2 class="section-title">iPSC</h2>
+                    <h2 class="innovation-tech">iPSC</h2>
                     <p class="large-text">
                          Induced Pluripotent Stem cells is an older technology that was discovered about 10 years ago. It was 
                          about taking differentiated cells like skin cells, and engineering them back into stem cells where 
@@ -218,11 +236,20 @@
                          low cost. The power of this technology isn't in a single therapy, but in how the technology will 
                          change the way we manufacture and develop new cell therapies.
                     </p>
+                    <div class="list-container">
+                         <h3 class="innovation-listhead">Companies in iPSC</h3>
+                         <ul class="list-align">
+                              <li class="innovation-link"><a href="../companies/ipsc.html">Century Therapeutics</a></li>
+                              <li class="innovation-link"><a href="../companies/sana.html">Sana Biotechnology</a></li>
+                              <li class="innovation-link"><a href="../companies/fate.html">Fate Therapeutics</a></li>
+                              <li class="innovation-link"><a href="../companies/caribou.html">Caribou Biosciences</a></li>
+                         </ul>
+                    </div>
                     <p class="top-link"><a href="#top">Top</a></p>
                </section>
 
                <section class="container" id="personalized">
-                    <h2 class="section-title">Personalized Medicine</h2>
+                    <h2 class="innovation-tech">Personalized Medicine</h2>
                     <p class="large-text">
                          The current standard of care in oncology is chemotherapy regimens. Chemotherapy is a group of drugs 
                          that target rapidly dividing cells. They don’t just target cancer cells, but all cells that divide 
@@ -239,6 +266,16 @@
                          information can be collected by sequencing to guide therapies into which targeted therapies will work 
                          best for each patient.
                     </p>
+                    <div class="list-container">
+                         <h3 class="innovation-listhead">Companies in Personalized Medicine</h3>
+                         <ul class="list-align">
+                              <li class="innovation-link"><a href="../companies/blueprint.html">Blueprint Medicines</a></li>
+                              <li class="innovation-link"><a href="../companies/mirati.html">Mirati Therapeutics</a></li>
+                              <li class="innovation-link"><a href="../companies/kymera.html">Kymera Therapeutics</a></li>
+                              <li class="innovation-link"><a href="../companies/revolution.html">Revolution Medicines</a></li>
+                              <li class="innovation-link"><a href="../companies/monterosa.html">Mone Rosa Therapeutics</a></li>
+                         </ul>
+                    </div>
                     <p class="top-link"><a href="#top">Top</a></p>
                </section>
           </main>
