--- a/innovation/innovation.html
+++ b/innovation/innovation.html
@@ -13,7 +13,7 @@
           </script>
 
           <!-- Page Title -->
-          <title>Science that is Leading the Innovation in Biotech</title>
+          <title>Innovation within Biotech</title>
 
           <!-- Meta Tags -->
           <meta charset="UTF-8">
