Data Readouts Updated

--- a/clinicaldata/clinicaldata.html
+++ b/clinicaldata/clinicaldata.html
@@ -122,7 +122,7 @@
                               <h2 class="science-list"><a href="datareadout.html">Data Readouts</a></h2>
                               <ul>
                                    <li class="science-topics">
-                                        <a href="datareadout.html">First Data Readout</a>
+                                        <a href="datareadout.html#rly4008">RLY-4008 Phase 1 Data</a>
                                    </li>
                               </ul>
                          </section>
