--- a/clinicaldata/datareadout.html
+++ b/clinicaldata/datareadout.html
@@ -101,18 +101,66 @@
                          </p>
                     </section>
 
-                              <ul class="investor-link">Learning:
+                              <ul class="investor-link">
+                                   <li>Data Readouts:</li>
                                    <li>
-                                        <a href="#">First Clinical Trial</a>
+                                        <a href="#rly4008">RLY-4008 Phase 1 Data</a>
                                    </li>
                               </ul>
 
                     <section>
-                         <h2 class="section-title" id="">First Clinical Trial</h2>
-                         <p>     
-                             
+                         <h2 class="section-title" id="rly4008">RLY-4008 Phase 1 Data</h2>
+                         <p>Link to the original data pdf so you can follow along 
+                              <a href="https://ir.relaytx.com/node/8161/pdf" target="_blank">RLY-4008 Phase 1 Data</a>
                          </p>
-                         
+                         <p>
+                              Here we will look at the data from RLY-4008. The image below will open in a full window so you can read it and 
+                              follow along with the data. The first image is the top section of the press release. Most of these press releases 
+                              start the same. They have a few bullet points to point out key data. I will read them, but too many times companies 
+                              will put data in the bullet points to make things look great, but when you read the actual data further down, it turns out to be
+                              bad. Never just read only the bullet points as many investors do this and get the wrong impression.
+                         </p>
+                         <a href="../images/relayimage1.png" target="_blank">
+                              <img class="data-set" src="../images/relayimage1.png" alt="RLY-4008 Press Release">
+                         </a>
+                         <p>     
+                             After the bullet points, there will be the section that highlights the data along with company comments on the 
+                             data. This always comes with the quotes to highlight the company comments. I often call this the spin comments. 
+                             Many times, when data is bad, the company will put spin on it in their comments to try to make it sound better 
+                             than it really is. For this data read out of RLY-4008, they are pointing out a subset of patients that were treated 
+                             only at the phase 2 dose. They show 15 of 17 responding for 88% Overall Response Rate. I don't have any problems 
+                             with this type of data cutout. I still would look over the rest of the patients which showed 66% Overall Response 
+                             Rates across all dose cohorts. The one word of caution I have is that a really awesome response rate of 88% can be misleading 
+                             in these small patient populations as they often do not hold up to those high levels as the trials progress and 
+                             the patient populations get bigger. Most FGFR2 inhibitors have response rates in the 20% to 30% which makes 88% more 
+                             than 3x the response rates compared to other drugs in this space. That is a game changer if it holds up that level 
+                             of response or doesn't give up a ton going into larger patient populations. 
+                         </p>
+                         <a href="../images/relayimage2.png" target="_blank">
+                              <img class="data-set" src="../images/relayimage2.png" alt="RLY-4008 Data">
+                         </a>
+                         <p>
+                              The very first thing we see in the data section is they treated 195 total patients, of which, 89 of 
+                              them were treated at the phase 2 dose of 70mg. The actual data is based on only 17 of those patients 
+                              which reached enough follow up to be included in the data so far. That is only about 19% of the patients 
+                              in the total trial were included. This still has a long way to go on data. Of the 15 patients that responded 
+                              13 remain in response with 1 of them only coming off treatment to get their tumor removed with curative intent. 
+                              That is very positive as the study drug shrank the tumor enough that they could remove it. The 2 people who 
+                              did not respond were still in stable disease. They did not progress or get worse. That is another very 
+                              positive data point. Out of all the patients who were treated in all dose cohorts, the response rate was 
+                              63% which is still more than double the historical rate for other FGFR2 inhibitors.
+                         </p>
+                         <p>
+                              The last section is the Safety Data. They don't provide very in depth data for the safety at this point other 
+                              than to say that most have been mild to moderate and manageable. This is encouraging as many FGFR2 inhibitors have 
+                              a ton of toxicity. We will have to wait and see more detailed data on safety. 
+                         </p>
+                         <p>
+                              Overall, I would sum this up as very powerful early data in an indication which typically has low response 
+                              rates and high toxicity. We still have 80% of the patients to see data on and it could change the response rate. 
+                              The key now is to see more of the data develop to ensure the response rates stay strong and the safety stays 
+                              clean. 
+                         </p>
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
 
