--- a/companies/relay.html
+++ b/companies/relay.html
@@ -209,7 +209,10 @@
                          <section class="section-container">
                               <h2 class="list-header">Events</h2>
                               <p class="profiles">
-                                   RLY-4008 Phase 1 Ongoing
+                                   RLY-4008 Phase 1 Dose Escalation Data at End of 1H 2023
+                              </p>
+                              <p class="profiles">
+                                   RLY-4008 Phase 1 Pivotal Cohort Full Enrollment by End of 2023
                               </p>
                               <p class="profiles">
                                    RLY-2608 Phase 1 Ongoing Data Expected 1H 2023
