--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
                     <section class="news-updates">
                          <div>
                               <h2 class="section-title">Website Updates</h2>
+                              <p> 
+                                   <strong>2/25/2023: </strong> I added the first data readout overview using
+                                    <a href="clinicaldata/datareadout.html#rly4008">RLY-4008 Phase 1 Data</a>
+                                   to the clinical data section for learning.
+                              </p>
+                              <p> 
+                                   <strong>2/25/2023: </strong> I updated the <a href="innovation/innovation.html">Innovation Page</a>
+                                   with a new look. I added list of companies to each theme along with links to the company's profile page.
+                              </p>
                               <p>
                                    <strong>2/23/2023: </strong> I started building out the Clinical Data section of 
                                    the site. Its currently under construction so it will probably be a mess until I get
@@ -131,11 +140,6 @@
                                    <strong>2/21/2023: </strong> I finished the build out my <a href="investing/portfoliobuilding.html">Investing</a>
                                    page of the website by adding several new sections today. 
                               <p> 
-                              <p> 
-                                   <strong>2/19/2023: </strong> I added the first 2 sections under my new 
-                                   <a href="investing/portfoliobuilding.html">Portfolio Building</a> and Investing
-                                   section. 
-                              </p>
                          </div>
                     </section>
                </div>
