Added Intellia Data

--- a/clinicaldata/datareadout.html
+++ b/clinicaldata/datareadout.html
@@ -106,6 +106,9 @@
                                    <li>
                                         <a href="#rly4008">RLY-4008 Phase 1 Data</a>
                                    </li>
+                                   <li>
+                                        <a href="#ntla2001">NTLA-2001 Phase 1 Data</a>
+                                   </li>
                               </ul>
 
                     <section>
@@ -160,6 +163,46 @@
                               rates and high toxicity. We still have 80% of the patients to see data on and it could change the response rate. 
                               The key now is to see more of the data develop to ensure the response rates stay strong and the safety stays 
                               clean. 
+                         </p>
+                         <p class="top-link"><a href="#top">Top</a></p>
+                    </section>
+
+                    <section>
+                         <h2 class="section-title" id="ntla2001">NTLA-2001 Phase 1 Data</h2>
+                         <p>Link to the original data pdf so you can follow along 
+                              <a href="https://ir.intelliatx.com/node/10451/pdf" target="_blank">NTLA-2001 Phase 1 Data</a>
+                         </p>
+                         <p>
+                              This starts out with the standard bullet statements which cover the indication, the biomarker data, and 
+                              basic safety statement. There are 12 patients for aTTR Cardiomyopathy treated with 2 possible doses of .7 mg/kg and 
+                              1.0 mg/kg. This data sets the stage for the study.
+                         </p>
+                         <a href="../images/intelliaimage1.png" target="_blank">
+                              <img class="data-set" src="../images/intelliaimage1.png" alt="NTLA-2001 Press Release">
+                         </a>
+                         <p>     
+                             Then comes the chart for 28 days after treatment. They break out 3 dose cohorts across different patient demographics. 
+                             You can see the first dose was tested in patients with 2 different classifications of aTTR. The aTTR serum levels 
+                             were reduced 92% and 94% in this .7 mg/kg dose. This compares with RNAi therapies like Vultisiran which had 88% serum 
+                             aTTR reduction. This is slightly better on the biomarker data. They will still have to do a bigger study with key endpoints 
+                             for Polyneuropathy and Cardiomyopathy indications. 
+                         </p>
+                         <a href="../images/intelliaimage2.png" target="_blank">
+                              <img class="data-set" src="../images/intelliaimage2.png" alt="NTLA-2001 Data">
+                         </a>
+                         <p>
+                              The next section starts out with the company comments about the study. The key data here is the safety section. 
+                              With RNAi studies, the drugs are taken once every 3 months or 4 times a year. About 15.6% of patients have serious 
+                              side effects from these chronic therapies. This is where permanent gene editing can compete. There is going to 
+                              be a percentage of patients who don't want to deal with the side effects they feel every time they have to administer 
+                              an RNAi injection. Where they might have trouble competing is on acceptance by insurers. The RNAi product in this space 
+                              costs upward of $460,000 per year to treat a patient. They would have to demonstrate long term efficacy to show insurers 
+                              they have a cost benefit. I suspect these treatments will be around $2 million per patient.
+                         </p>
+                         <p>
+                              Overall, this data is very encouraging as it shows biomarker data that is superior to current treatments and a 
+                              safety profile that is safer than the current treatments. Its going to take a lot more data before we know for sure 
+                              that this therapy will be competitive with RNAi. It needs to hold efficacy and safety to be competitive.
                          </p>
                          <p class="top-link"><a href="#top">Top</a></p>
                     </section>
