Missed Link Fixed

--- a/clinicaldata/clinicaldata.html
+++ b/clinicaldata/clinicaldata.html
@@ -124,6 +124,9 @@
                                    <li class="science-topics">
                                         <a href="datareadout.html#rly4008">RLY-4008 Phase 1 Data</a>
                                    </li>
+                                   <li class="science-topics">
+                                        <a href="datareadout.html#ntla2001">NTLA-2001 Phase 1 Data</a>
+                                   </li>
                               </ul>
                          </section>
                     </div>
